plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// === Spring Boot 스타터 의존성 ===

	// Spring Web (Controller, RestController 등 웹 어플리케이션 기본 구성)
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Thymeleaf 템플릿 엔진 (HTML 템플릿 처리용)
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// Spring Data JPA (ORM, Repository 등 DB 연동 기능 제공)
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Spring Security (인증/인가 기능 제공)
	implementation 'org.springframework.boot:spring-boot-starter-security'


	// === Redis 관련 의존성 ===

	// Spring Data Redis (Redis 연동 기능 제공)
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Redis 커넥션 풀을 위한 commons-pool2
	implementation 'org.apache.commons:commons-pool2'

	// === Spring Security 관련 의존성 ===
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	// JWT (JSON Web Token) 관련 라이브러리
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'

	// === API 문서화 및 유효성 검사 ===

	// Swagger(OpenAPI) 문서 자동 생성
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

	// Hibernate Validator (Bean Validation을 위한 의존성)
	implementation 'org.hibernate.validator:hibernate-validator'


	// === DB 드라이버 ===

	// PostgreSQL 드라이버 (JPA와 연동되는 실DB 연결용)
	runtimeOnly 'org.postgresql:postgresql'


	// === 개발 편의성 ===

	// Lombok (코드 자동 생성 - getter/setter 등)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// 개발 중 핫 리로딩 지원 (자동 재시작)
	developmentOnly 'org.springframework.boot:spring-boot-devtools'


	// === 테스트 의존성 ===

	// Spring Boot 테스트 기능 (JUnit, MockMvc 등 포함)
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}


tasks.named('test') {
	useJUnitPlatform()
}
